Change prompt from 'calculate trials' to 'generate outcomes'

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			<div class="app-input-bg"></div>
 		</div>
 		<div style="position:relative; margin-top:12px; padding:8px"><!-- results -->
-			<div class="results">Press "GO!" to calculate trials...</div>
+			<div class="results">Press "GO!" to generate outcomes...</div>
                         <div class="app-results-bg"></div>
 		</div>
 	</div>
